addons/addon-base-raas/packages/base-raas-cfn-templates/src/templates/service-catalog/rds-managed-aurora.cfn.yml
---
AWSTemplateFormatVersion: 2010-09-09

Description: Service-Workbench-on-AWS Managed RDS Aurora

Parameters:
  Namespace:
    Type: String
    Description: An environment name that will be prefixed to resource names
  DbEngine:
    Type: String
    Description: Engine type. aurora (for MySQL 5.6-compatible Aurora), aurora-mysql (for MySQL 5.7-compatible Aurora), and aurora-postgresql
  DbName:
    Description: Database Name
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
  DbUsername:
    NoEcho: 'true'
    Description: Username for MySQL database access
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
  DbPassword:
    NoEcho: 'true'
    Description: Password MySQL database access
    Type: String
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.
  DbMinCapacity:
    Type: Number
    Description: Minimum Aurora Capacity Unit
    Default: 1
  DbMaxCapacity:
    Type: Number
    Description: Maximum Aurora Capacity Unit
    Default: 64
  DbSecondsUntilAutoPause:
    Type: Number
    Description: Number of seconds until database auto-pauses
    Default: 300
  IamPolicyDocument:
    Type: String
    Description: The IAM policy to be associated with the launched database
  VPC:
    Description: The VPC in which the database instance will reside
    Type: AWS::EC2::VPC::Id
  VPCCidr:
    Description: CIDR block for the VPC in which teh database instance will reside
    Type: String
  EncryptionKeyArn:
    Type: String
    Description: The ARN of the KMS encryption Key used to encrypt data in the instance

Conditions:
  IamPolicyEmpty: !Equals [!Ref IamPolicyDocument, '{}']

Resources:
  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: RDS workspace security group
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref VPCCidr
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: !Ref VPCCidr
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: !Ref VPCCidr
      Tags:
        - Key: Name
          Value: !Join ['-', [Ref: Namespace, 'rds-sg']]
        - Key: Description
          Value: RDS workspace security group
      VpcId: !Ref VPC

  RDSCluster:
    Type: 'AWS::RDS::DBCluster'
    Properties:
      DatabaseName: !Ref DbName
      DBSubnetGroupName: ces-oregon-dev-db-subnet-group
      EnableHttpEndpoint: 'true'
      Engine: !Ref DbEngine
      EngineMode: serverless
      ScalingConfiguration:
        AutoPause: 'true'
        MaxCapacity: !Ref DbMaxCapacity
        MinCapacity: !Ref DbMinCapacity
        SecondsUntilAutoPause: !Ref DbSecondsUntilAutoPause
      KmsKeyId: !Ref EncryptionKeyArn
      StorageEncrypted: 'true'
      MasterUsername: !Ref DbUsername
      MasterUserPassword: !Ref DbPassword
      VpcSecurityGroupIds:
        - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: !Join ['-', [Ref: Namespace, 'rds-aurora', Ref: DbEngine]]
        - Key: Description
          Value: Serverless Aurora RDS

Outputs:
  RDSWorkspaceEndpoint:
    Description: Public endpoint address of the RDS workspace instance
    Value: !GetAtt [RDSCluster, Endpoint.Address]

  RDSWorkspacePort:
    Description: Connection port for the RDS workspace instance
    Value: !GetAtt [RDSCluster, Endpoint.Port]
